test/Fail/Issue1944-UnappliedOverloadedProjectionNotRecord.err
Issue1944-UnappliedOverloadedProjectionNotRecord.agda:15.8-9: error: [AmbiguousOverloadedProjection]
Cannot resolve overloaded projection f because
principal argument has type A₁ while it should be of record type
  candidates in scope:
- f : {B : Set} → R B → B
- f : {B : Set} → S B → B
when checking that the expression f has type A₁ → A₁
